<resources>
    <string name="app_name">Game Manager</string>
    <string name="label_Name">Name</string>
    <string name="label_Price">Price</string>
    <string name="label_Date">Date</string>
    <string name="label_Desc">Description</string>
    <string name="label_DLC_s">DLC(s)</string>
    <string name="template_DLC">%d DLC(s)</string>
    <string name="title_listGame">Game List</string>
    <string name="title_template_gameDetail">Detail: "%s"</string>
    <string name="title_template_dlcDetail">DLC：%s</string>
    <string name="title_template_listDlc">DLC List of "%s"</string>
    <string name="default_gameName">Layers of fear</string>
    <string name="default_gameDesc">Layers of Fear is a first-person psychedelic horror game with a heavy focus on story and exploration. Players take control of a painter whose sole purpose is to finish his Magnum Opus.</string>
    <string name="default_dlcName">Layers of Fear: Inheritance</string>
    <string name="default_dlcDesc">Layers of Fear: Inheritance expands the plot from Layers of Fear and tells the story of the painter’s daughter, who comes back to her childhood home to face her past. Can she forgive her father, or will she resent all that has happened? Relive her experiences and witness the full scope of the tragedy that has swallowed up the family.
Lead the daughter through what’s left of the mansion and take part in the madness that her father bestowed upon the whole family. Face the memories of her past and shape them into the destiny that awaits her. </string>
    <string name="info_template_listCount">%d items.</string>
    <string name="hint_title">Alert</string>
    <string name="hint_deleteConfirm">Are you sure to delete this item?</string>
    <string name="hint_cancelConfirm">You have unsaved modifications, do you wish to save them and back?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">Nope</string>
    <string name="no_desc">No description</string>
    <string name="gamehoursphint">How many hours did you play today?</string>
    <string name="hours">You\'ve played </string>
    <string name="Hours"> Hours</string>
    <string name="default2_gameName">Counter Strike: Global Offensive</string>
    <string name="default2_gameDesc">Counter-Strike: Global Offensive (CS:GO) is a multiplayer first-person shooter video game developed by Hidden Path Entertainment and Valve Corporation. It is the fourth game in the Counter-Strike series and was released for Microsoft Windows, OS X, Xbox 360, and PlayStation 3 on August 21, 2012, while the Linux version was released in 2014.</string>
    <string name="hint_rateGame">What do you think of this game?</string>
    <string name="label_userRating">User rating:\ </string>
    <string name="rating_none">No rating yet</string>
    <string name="rating_good">Good</string>
    <string name="rating_soso">So-so</string>
    <string name="rating_bad">Bad</string>
    <string name="chart_hist">Histogram</string>
    <string name="chart_donut">Donut Chart</string>
</resources>
