<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:clickable="true"
    app:cardBackgroundColor="@color/colorCard"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/itemView_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="2"
            android:text="@string/default_gameName"
            android:textColor="@color/colorText"
            android:textSize="12pt"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/itemView_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/itemView_price"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="$19.99"
            android:textAlignment="viewStart"
            android:textSize="8pt"
            app:layout_constraintBottom_toTopOf="@id/itemView_userRatingLabel"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/itemView_date"
            app:layout_constraintTop_toBottomOf="@id/itemView_name" />

        <TextView
            android:id="@+id/itemView_date"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="2014-10-9"
            android:textAlignment="viewEnd"
            android:textSize="8pt"
            app:layout_constraintBottom_toTopOf="@id/itemView_userRatingLabel"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintLeft_toRightOf="@id/itemView_price"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemView_name" />

        <TextView
            android:id="@+id/itemView_dlcCount"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="2DLC(s)"
            android:textAlignment="viewStart"
            android:textSize="8pt"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/itemView_userRatingLabel"
            app:layout_constraintTop_toBottomOf="@id/itemView_date" />

        <TextView
            android:id="@+id/itemView_userRatingLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/label_userRating"
            android:textAlignment="viewEnd"
            android:textSize="8pt"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintLeft_toRightOf="@+id/itemView_dlcCount"
            app:layout_constraintRight_toRightOf="@+id/itemView_userRating"
            app:layout_constraintTop_toBottomOf="@id/itemView_date"
            app:layout_constraintWidth_default="wrap" />

        <TextView
            android:id="@+id/itemView_userRating"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorGood"
            android:text="@string/rating_good"
            android:textAlignment="viewEnd"
            android:textSize="8pt"
            app:layout_constraintHeight_default="wrap"
            app:layout_constraintLeft_toRightOf="@+id/itemView_userRatingLabel"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemView_date"
            app:layout_constraintWidth_default="wrap" />

        <TextView
            android:id="@+id/itemView_Desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/default_gameDesc"
            android:textSize="8pt"
            android:ellipsize="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemView_userRatingLabel" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>